--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "version": "0.1.0",
   "author": "Lu-Vuong Le <lu-vuongle@hotmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.19.7",
+    "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
