--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-load-script": "^1.0.6",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
@@ -23,6 +24,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-reveal": "^1.2.2",
     "smooth-scroll": "^16.1.2",
     "typed.js": "^2.0.11"
   },
