--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-load-script": "^1.0.6",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-netlify-cms": "^4.2.4",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
+    "netlify-cms-app": "^2.12.9",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-lazyload": "^2.6.7",
     "react-reveal": "^1.2.2",
     "smooth-scroll": "^16.1.2",
     "typed.js": "^2.0.11"
