--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-guess-js": "^1.2.3",
     "gatsby-plugin-load-script": "^1.0.6",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-netlify-cms": "^4.2.4",
