--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.22",
+    "gatsby-plugin-feed": "^2.4.3",
     "gatsby-plugin-google-analytics": "^2.2.4",
     "gatsby-plugin-guess-js": "^1.2.3",
     "gatsby-plugin-load-script": "^1.0.6",
@@ -20,11 +21,17 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-sitemap": "^2.3.5",
+    "gatsby-remark-copy-linked-files": "^2.2.3",
+    "gatsby-remark-images": "^3.2.4",
+    "gatsby-remark-prismjs": "^3.4.4",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-remark": "^2.7.3",
     "gatsby-transformer-sharp": "^2.3.13",
     "netlify-cms-app": "^2.12.9",
     "node-sass": "^4.13.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
