--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-transformer-remark": "^2.7.3",
     "gatsby-transformer-sharp": "^2.3.13",
     "netlify-cms-app": "^2.12.9",
+    "netlify-cms-media-library-cloudinary": "^1.3.4",
     "node-sass": "^4.13.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
