--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "algoliasearch": "^4.2.0",
     "gatsby": "^2.19.7",
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-algolia": "^0.9.0",
     "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-feed": "^2.4.3",
     "gatsby-plugin-google-analytics": "^2.2.4",
@@ -37,6 +39,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.4.0",
     "react-lazyload": "^2.6.7",
     "react-reveal": "^1.2.2",
     "typed.js": "^2.0.11"
