--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "algoliasearch": "^4.2.0",
+    "disqus-react": "^1.0.8",
     "gatsby": "^2.19.7",
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.2.39",
@@ -24,9 +25,11 @@
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-sitemap": "^2.3.5",
+    "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-copy-linked-files": "^2.2.3",
     "gatsby-remark-images": "^3.2.4",
     "gatsby-remark-prismjs": "^3.4.4",
+    "gatsby-remark-prismjs-title": "^1.0.0",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-remark": "^2.7.3",
